--- a/hospital/templates/view_cart.html
+++ b/hospital/templates/view_cart.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="robots" content="noindex,follow" />
     <!-- Site Icons -->
-   <link rel="shortcut icon" href="static/images/fevicon.ico.png" type="image/x-icon" />
+   <link rel="shortcut icon" href="{{ url_for('static', filename='images/fevicon.ico.png') }}" type="image/x-icon" />
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
@@ -17,6 +17,9 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='cart.css') }}" media="screen" title="no title" charset="utf-8">
     <script src="https://code.jquery.com/jquery-2.2.4.js" charset="utf-8"></script>
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='main.css') }}">
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
     
     {% if title %}
         <title>Life Care - {{ title }}</title>
@@ -72,7 +75,7 @@
           <!-- Product #1 -->
           <div class="item" style="max-width: fit-content;border-style: ridge;">
             <div class="buttons" style=" max-width: 20px;">
-              <span class="delete-btn" style="background: url( {{ url_for('static', filename='images/delete-icn.svg') }} ); no-repeat center;" data-toggle="modal" data-target="#deleteModal"></span>
+              <span class="delete-btn" style="background: url( {{ url_for('static', filename='images/delete-icn.svg') }} ); no-repeat center;" data-toggle="modal" data-target="#delModal"></span>
               <span class="like-btn" style="background: url( {{ url_for('static', filename='images/twitter-heart.png') }} ); position: absolute;top: 9px;left: 15px;display: inline-block;width: 60px;height: 60px;background-size: 2900%;background-repeat: no-repeat;cursor: pointer;"></span>
             </div>
     
@@ -91,11 +94,11 @@
             <div class="total-price">Rs. {{ item.medicine.price*item.quantity }}</div>
           </div>
          <!-- Modal -->
-          <div class="modal fade" id="deleteModal" tabindex="-1" role="dialog" aria-labelledby="deleteModalLabel" aria-hidden="true">
+          <div class="modal fade" id="delModal" tabindex="-1" role="dialog" aria-labelledby="delModalLabel" aria-hidden="true">
             <div class="modal-dialog" role="document">
               <div class="modal-content">
                 <div class="modal-header">
-                  <h5 class="modal-title" id="deleteModalLabel">Delete Cart Item?</h5>
+                  <h5 class="modal-title" id="delModalLabel">Delete Cart Item?</h5>
                   <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                   </button>
@@ -135,14 +138,14 @@
       {% endif %}
       </main>
       <button class="open-button" onclick="openForm()" style="right: 70px;">
-        <img src="static/images/lifebot.gif" alt="Avatar" class="avatar" style="right: 50px;">
+        <img src="{{ url_for('static', filename='images/lifebot.gif') }}" alt="Avatar" class="avatar" style="right: 50px;">
       </button>
       <div class="container" id="myForm" style="display: none; width: 500px;z-index: 9;position: fixed;right: 15px;bottom: 0px;border: none;">
         <div class="chat" style="display: flex;flex-direction: column;height: 80vh;width:490px;background: rgb(227, 230, 221);border-style: ridge;">
            <div class="chat-header">
               <div class="profile">
                  <div class="left">
-                    <img src="static/images/lifebot.gif" class="pp" style="margin-bottom: 2px; width: 60px; height: 60px;">
+                    <img src="{{ url_for('static', filename='images/lifebot.gif') }}" class="pp" style="margin-bottom: 2px; width: 60px; height: 60px;">
                     <button style="border-radius: 50%; position: fixed; right: 20px; bottom: 750px; padding-right: 5px; margin-right: 2px;background-color: white; border-width: thin;" onclick="closeForm()"><i class="fa fa-close" style="margin-left: 5px ;font-size:20px; cursor: pointer; "></i></button>
                     <h3 style="margin-left: 18px; margin-bottom: 20px;">Life-Care Bot</h3>
                     <span style="padding-top: 6px;color: white; margin-left: 8px; margin-bottom: 16px; font-size: 15px;">Ask me questions about this website</span>
